# serializer version: 1
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.1
  '''
  SELECT "clairview_organizationmembership"."id",
         "clairview_organizationmembership"."organization_id",
         "clairview_organizationmembership"."user_id",
         "clairview_organizationmembership"."level",
         "clairview_organizationmembership"."joined_at",
         "clairview_organizationmembership"."updated_at",
         "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organizationmembership"
  INNER JOIN "clairview_organization" ON ("clairview_organizationmembership"."organization_id" = "clairview_organization"."id")
  WHERE "clairview_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.10
  '''
  SELECT "clairview_hogfunction"."id",
         "clairview_hogfunction"."team_id",
         "clairview_hogfunction"."name",
         "clairview_hogfunction"."description",
         "clairview_hogfunction"."created_at",
         "clairview_hogfunction"."created_by_id",
         "clairview_hogfunction"."deleted",
         "clairview_hogfunction"."updated_at",
         "clairview_hogfunction"."enabled",
         "clairview_hogfunction"."icon_url",
         "clairview_hogfunction"."hog",
         "clairview_hogfunction"."bytecode",
         "clairview_hogfunction"."inputs_schema",
         "clairview_hogfunction"."inputs",
         "clairview_hogfunction"."encrypted_inputs",
         "clairview_hogfunction"."filters",
         "clairview_hogfunction"."masking",
         "clairview_hogfunction"."template_id",
         "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_hogfunction"
  INNER JOIN "clairview_team" ON ("clairview_hogfunction"."team_id" = "clairview_team"."id")
  WHERE ("clairview_hogfunction"."team_id" = 2
         AND "clairview_hogfunction"."filters" @> '{"filter_test_accounts": true}'::jsonb)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.11
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE ("clairview_team"."project_id" = 2
         AND "clairview_team"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.12
  '''
  SELECT 1 AS "a"
  FROM "clairview_grouptypemapping"
  WHERE "clairview_grouptypemapping"."team_id" = 2
  LIMIT 1
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.13
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE ("clairview_team"."project_id" = 2
         AND "clairview_team"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.14
  '''
  SELECT "clairview_productintent"."product_type",
         "clairview_productintent"."created_at",
         "clairview_productintent"."onboarding_completed_at"
  FROM "clairview_productintent"
  WHERE "clairview_productintent"."team_id" = 2
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.15
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.16
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.17
  '''
  SELECT "clairview_pluginconfig"."id",
         "clairview_pluginconfig"."web_token",
         "clairview_pluginsourcefile"."updated_at",
         "clairview_plugin"."updated_at",
         "clairview_pluginconfig"."updated_at"
  FROM "clairview_pluginconfig"
  INNER JOIN "clairview_plugin" ON ("clairview_pluginconfig"."plugin_id" = "clairview_plugin"."id")
  INNER JOIN "clairview_pluginsourcefile" ON ("clairview_plugin"."id" = "clairview_pluginsourcefile"."plugin_id")
  WHERE ("clairview_pluginconfig"."enabled"
         AND "clairview_pluginsourcefile"."filename" = 'site.ts'
         AND "clairview_pluginsourcefile"."status" = 'TRANSPILED'
         AND "clairview_pluginconfig"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.2
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."organization_id",
         "clairview_team"."access_control"
  FROM "clairview_team"
  WHERE "clairview_team"."organization_id" IN ('00000000-0000-0000-0000-000000000000'::uuid)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.3
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.4
  '''
  SELECT "clairview_project"."id",
         "clairview_project"."organization_id",
         "clairview_project"."name",
         "clairview_project"."created_at"
  FROM "clairview_project"
  WHERE "clairview_project"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.5
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE ("clairview_team"."project_id" = 2
         AND "clairview_team"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.6
  '''
  SELECT "clairview_organizationmembership"."id",
         "clairview_organizationmembership"."organization_id",
         "clairview_organizationmembership"."user_id",
         "clairview_organizationmembership"."level",
         "clairview_organizationmembership"."joined_at",
         "clairview_organizationmembership"."updated_at",
         "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organizationmembership"
  INNER JOIN "clairview_organization" ON ("clairview_organizationmembership"."organization_id" = "clairview_organization"."id")
  WHERE "clairview_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.7
  '''
  SELECT "clairview_organizationmembership"."id",
         "clairview_organizationmembership"."organization_id",
         "clairview_organizationmembership"."user_id",
         "clairview_organizationmembership"."level",
         "clairview_organizationmembership"."joined_at",
         "clairview_organizationmembership"."updated_at",
         "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organizationmembership"
  INNER JOIN "clairview_organization" ON ("clairview_organizationmembership"."organization_id" = "clairview_organization"."id")
  WHERE "clairview_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.8
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."organization_id",
         "clairview_team"."access_control"
  FROM "clairview_team"
  WHERE "clairview_team"."organization_id" IN ('00000000-0000-0000-0000-000000000000'::uuid)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.9
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE ("clairview_team"."project_id" = 2
         AND "clairview_team"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts
  '''
  SELECT "clairview_hogfunction"."id",
         "clairview_hogfunction"."team_id",
         "clairview_hogfunction"."name",
         "clairview_hogfunction"."description",
         "clairview_hogfunction"."created_at",
         "clairview_hogfunction"."created_by_id",
         "clairview_hogfunction"."deleted",
         "clairview_hogfunction"."updated_at",
         "clairview_hogfunction"."enabled",
         "clairview_hogfunction"."icon_url",
         "clairview_hogfunction"."hog",
         "clairview_hogfunction"."bytecode",
         "clairview_hogfunction"."inputs_schema",
         "clairview_hogfunction"."inputs",
         "clairview_hogfunction"."encrypted_inputs",
         "clairview_hogfunction"."filters",
         "clairview_hogfunction"."masking",
         "clairview_hogfunction"."template_id",
         "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_hogfunction"
  INNER JOIN "clairview_team" ON ("clairview_hogfunction"."team_id" = "clairview_team"."id")
  WHERE ("clairview_hogfunction"."team_id" = 2
         AND "clairview_hogfunction"."filters" @> '{"filter_test_accounts": true}'::jsonb)
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.1
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.2
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.3
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.4
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.5
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts
  '''
  SELECT "clairview_hogfunction"."id",
         "clairview_hogfunction"."team_id",
         "clairview_hogfunction"."name",
         "clairview_hogfunction"."description",
         "clairview_hogfunction"."created_at",
         "clairview_hogfunction"."created_by_id",
         "clairview_hogfunction"."deleted",
         "clairview_hogfunction"."updated_at",
         "clairview_hogfunction"."enabled",
         "clairview_hogfunction"."icon_url",
         "clairview_hogfunction"."hog",
         "clairview_hogfunction"."bytecode",
         "clairview_hogfunction"."inputs_schema",
         "clairview_hogfunction"."inputs",
         "clairview_hogfunction"."encrypted_inputs",
         "clairview_hogfunction"."filters",
         "clairview_hogfunction"."masking",
         "clairview_hogfunction"."template_id",
         "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_hogfunction"
  INNER JOIN "clairview_team" ON ("clairview_hogfunction"."team_id" = "clairview_team"."id")
  WHERE ("clairview_hogfunction"."team_id" = 2
         AND "clairview_hogfunction"."filters" @> '{"filter_test_accounts": true}'::jsonb)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.1
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.2
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.3
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.4
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.5
  '''
  SELECT (("clairview_person"."properties" -> '$some_prop_1') = '"something_1"'::jsonb
          AND "clairview_person"."properties" ? '$some_prop_1'
          AND NOT (("clairview_person"."properties" -> '$some_prop_1') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'example_id_1'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.6
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.7
  '''
  SELECT (("clairview_person"."properties" -> '$some_prop_1') = '"something_1"'::jsonb
          AND "clairview_person"."properties" ? '$some_prop_1'
          AND NOT (("clairview_person"."properties" -> '$some_prop_1') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'another_id'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_web_app_queries
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestDecide.test_web_app_queries.1
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_web_app_queries.2
  '''
  SELECT "clairview_pluginconfig"."id",
         "clairview_pluginconfig"."web_token",
         "clairview_pluginsourcefile"."updated_at",
         "clairview_plugin"."updated_at",
         "clairview_pluginconfig"."updated_at"
  FROM "clairview_pluginconfig"
  INNER JOIN "clairview_plugin" ON ("clairview_pluginconfig"."plugin_id" = "clairview_plugin"."id")
  INNER JOIN "clairview_pluginsourcefile" ON ("clairview_plugin"."id" = "clairview_pluginsourcefile"."plugin_id")
  WHERE ("clairview_pluginconfig"."enabled"
         AND "clairview_pluginsourcefile"."filename" = 'site.ts'
         AND "clairview_pluginsourcefile"."status" = 'TRANSPILED'
         AND "clairview_pluginconfig"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_web_app_queries.3
  '''
  SELECT "clairview_hogfunction"."id",
         "clairview_hogfunction"."team_id",
         "clairview_hogfunction"."name",
         "clairview_hogfunction"."description",
         "clairview_hogfunction"."created_at",
         "clairview_hogfunction"."created_by_id",
         "clairview_hogfunction"."deleted",
         "clairview_hogfunction"."updated_at",
         "clairview_hogfunction"."enabled",
         "clairview_hogfunction"."icon_url",
         "clairview_hogfunction"."hog",
         "clairview_hogfunction"."bytecode",
         "clairview_hogfunction"."inputs_schema",
         "clairview_hogfunction"."inputs",
         "clairview_hogfunction"."encrypted_inputs",
         "clairview_hogfunction"."filters",
         "clairview_hogfunction"."masking",
         "clairview_hogfunction"."template_id",
         "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_hogfunction"
  INNER JOIN "clairview_team" ON ("clairview_hogfunction"."team_id" = "clairview_team"."id")
  WHERE ("clairview_hogfunction"."team_id" = 2
         AND "clairview_hogfunction"."filters" @> '{"filter_test_accounts": true}'::jsonb)
  '''
# ---
# name: TestDecide.test_web_app_queries.4
  '''
  SELECT "clairview_pluginconfig"."id",
         "clairview_pluginconfig"."web_token",
         "clairview_pluginsourcefile"."updated_at",
         "clairview_plugin"."updated_at",
         "clairview_pluginconfig"."updated_at"
  FROM "clairview_pluginconfig"
  INNER JOIN "clairview_plugin" ON ("clairview_pluginconfig"."plugin_id" = "clairview_plugin"."id")
  INNER JOIN "clairview_pluginsourcefile" ON ("clairview_plugin"."id" = "clairview_pluginsourcefile"."plugin_id")
  WHERE ("clairview_pluginconfig"."enabled"
         AND "clairview_pluginsourcefile"."filename" = 'site.ts'
         AND "clairview_pluginsourcefile"."status" = 'TRANSPILED'
         AND "clairview_pluginconfig"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_web_app_queries.5
  '''
  SELECT "clairview_pluginconfig"."id",
         "clairview_pluginconfig"."web_token",
         "clairview_pluginsourcefile"."updated_at",
         "clairview_plugin"."updated_at",
         "clairview_pluginconfig"."updated_at"
  FROM "clairview_pluginconfig"
  INNER JOIN "clairview_plugin" ON ("clairview_pluginconfig"."plugin_id" = "clairview_plugin"."id")
  INNER JOIN "clairview_pluginsourcefile" ON ("clairview_plugin"."id" = "clairview_pluginsourcefile"."plugin_id")
  WHERE ("clairview_pluginconfig"."enabled"
         AND "clairview_pluginsourcefile"."filename" = 'site.ts'
         AND "clairview_pluginsourcefile"."status" = 'TRANSPILED'
         AND "clairview_pluginconfig"."team_id" = 2)
  '''
# ---
